# Machine-Learning

./: .gitignore  Readme.md  pyproject.toml
Exploratory Data Analysis/: Univariate Analysis.ipynb  summary.txt
Exploratory Data Analysis/.ipynb_checkpoints/: Multivariate Analysis-checkpoint.ipynb  Univariate Analysis-checkpoint.ipynb
numpy/: array_operations.ipynb  array_slicing.ipynb  exercise.ipynb  numpy-start.ipynb
pandas/: countries.ipynb  dataframe.ipynb  feature_extraction.ipynb  group_by_aggregation.ipynb  merging_joining_concatenation.ipynb  missing_data.ipynb  operations.ipynb  pivot_tables.ipynb  series.ipynb
pandas/.ipynb_checkpoints/: countries-checkpoint.ipynb
profiling-data/: Profiling.ipynb
profiling-data/.ipynb_checkpoints/: Profiling-checkpoint.ipynb
working with matplotlib/: working with matplotlib.ipynb
working-with-sql/: working_with_sql.ipynb
